Fixed z-index

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/menu.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/menu.less
@@ -5,12 +5,14 @@
   min-height: @cruise-2018-menu-height;
   display: block;
   padding-bottom: 60px;
+  z-index: 1001;
+  position: relative;
 
   .ssc-sticky {
     position: -webkit-sticky;
     position: sticky;
     top: 110px;
-    z-index: 99;
+    z-index:1001;
   }
   .cruise-2018-menu-container {
     height: @cruise-2018-menu-height;
